Added changes to hopefully pass CI and build