@@ -1,5 +1,12 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
+
 package com.azure.storage.internal.avro.implementation;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -8,7 +15,8 @@ import java.util.Set;
 public class AvroConstants {
 
     public static final int SYNC_MARKER_SIZE = 16;
-    public static final byte[] MAGIC_BYTES = { (byte) 'O', (byte) 'b', (byte) 'j', (byte) 1 };
+    public static final List<Byte> MAGIC_BYTES = Collections.unmodifiableList(
+        Arrays.asList((byte) 'O', (byte) 'b', (byte) 'j', (byte) 1));
     public static final String CODEC_KEY = "avro.codec";
     public static final String SCHEMA_KEY = "avro.schema";
     public static final String DEFLATE_CODEC = "deflate";
@@ -35,8 +43,8 @@ public class AvroConstants {
         public static final String MAP = "map";
         public static final String UNION = "union";
 
-        public static final Set<String> PRIMITIVE_TYPES = Set.of(NULL, BOOLEAN, STRING, BYTES, INT, LONG, FLOAT,
-            DOUBLE);
+        public static final Set<String> PRIMITIVE_TYPES = Collections.unmodifiableSet(new HashSet<>(
+            Arrays.asList(NULL, BOOLEAN, STRING, BYTES, INT, LONG, FLOAT, DOUBLE)));
 
     }
 
